# DesktopAiHelper

./: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~RF7c1244.TMP  Gemini reply json format.json  LICENSE  README.md  aiclient.cpp  aiclient.h  chatgptclient.cpp  chatgptclient.h  chathistory.json  commit_all.sh  config.ini  geminiclient.cpp  geminiclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  style.qss
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: ARCHITECTURE.md  DEBUGLOG.md  PRIVACY.md  ROADMAP.md  TECHNICAL_OVERVIEW.md
